<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">课程表</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="button1">查询课表</string>
    <string name="button2">我的课程表</string>
    <string name="app_name_en">我的课程表</string>
    <string name="tab_course">课程表</string>
	<string name="tab_found">发现</string>
	<string name="tab_settings">设置</string>
	<string name="edit_course_delete_course">删除本节课</string>
	<string name="settings_switch_semester">当前学期</string>
	<string name="settings_week_tip">当前周数</string>
	<string name="settings_maxCount">课表最大节数</string>
	<string name="settings_section_tip">设置课表最大节数</string>
	<string name="settings_weekStart">一周起始日</string>
	<string name="settings_weekStart_tip">周一</string>
	<string name="setting_notice_center">通知中心</string>
	<string name="setting_software_about">关于软件</string>
	<string name="setting_logout">切换账号</string>
	<string name="course_info_course_name">名称</string>
	<string name="course_info_teacher">老师</string>
	<string name="course_info_classroom">教室</string>
	<string name="course_info_weeks">周数</string>
	<string name="course_info_time">时间</string>
	<string name="general_edit">编辑</string>
	<string name="course_info_section">节数</string>
	<string name="general_cancle">取消</string>
	<string name="course_info_no_content">(未编辑)</string>
	<string name="add_course_name_hint">请输入课程名称</string>
	<string name="course_name">课程名称</string>
	<string name="edit_course_classroom_hint">请输入教室地点</string>
	<string name="edit_course_teacher_hint">请输入老师姓名</string>
	<string name="add_course_section_tip">选择上课节数</string>
	<string name="edit_course_week_tip">选择上课周数</string>
	<string name="course_info_classmate">同学</string>
	<string name="course_info_evaluate">评价</string>
	<string name="general_back">返回</string>
	<string name="general_confirm">确定</string>
	<string name="main_course_menu_add_course">添加课程</string>
	<string name="main_course_menu_switch_semester">新建/切换学期</string>
	<string name="main_course_menu_rub_course">蹭课</string>
	<string name="main_course_hand_getcourse">手动创建</string>
	<string name="main_course_getCourse">再试一次</string>
	<string name="loading">正在加载</string>
	<string name="tips_input_course_name">在这里输入课程名添加课程吧！</string>
	<string name="select_course_select_result">搜索结果</string>
	<string name="tips_rub_search_empty_text">暂时查询不到你想要的课程</string>
	<string name="real_time_query">实时查询</string>
	<string name="empty_query">教室查询</string>
	<string name="course_table">我的课表</string>
	<string name="apply">申请教室</string>
	<string name="settings">设置</string>
	<string name="search_course">课程查询</string>
	<string name="personalInfo">个人资料</string>
	<string name="basicInfoTip">基本资料</string>
	<string name="schoolInfoTip">专业/班级信息</string>
	<string name="rightArrow">＞</string>
	<string name="courseSettingTip">请正确设置您的课表信息</string>
	<string name="currentTerm">当前学期</string>
	<string name="currentWeek">当前周数</string>
	<string name="maxcoursenum">课表最大节数</string>
	<string name="remindTip">提醒设置</string>
	<string name="classrommremind">自习室被占提醒</string>
	<string name="aboutAuthor">关于作者</string>
	<string name="exit">退出当前账号</string>
	<string name="student_count">位同学</string>
    <string name="course_teacher">老师：</string>
    <string name="course_classroom">教室：</string>
    <string name="course_section">节数：</string>
    <string name="course_week">周数：</string>
    <string name="course_add_course">加入课程</string>
</resources>
