<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#e9f8ef"
    android:orientation="vertical" >
	<RelativeLayout
        android:id="@+id/rlyt_title1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <include
            android:id="@id/rlyt_title_bar"
            android:layout_centerHorizontal="true"
            layout="@layout/rlyt_title_bar" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/r1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:layout_below="@id/rlyt_title1"
        android:background="#e9f8ef"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_real_time_query"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@drawable/button_round_corner"
            android:drawablePadding="3dp"
            android:drawableTop="@drawable/real_time_query"
            android:paddingBottom="5dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="5dp"
            android:text="@string/real_time_query"
            android:textSize="12sp" />

        <Button
            android:id="@+id/button_empty_query"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/button_round_corner"
            android:drawablePadding="3dp"
            android:drawableTop="@drawable/empty_query"
            android:paddingBottom="5dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="5dp"
            android:text="@string/empty_query"
            android:textSize="12sp" />

        <Button
            android:id="@+id/button_course_table"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/button_round_corner"
            android:drawablePadding="3dp"
            android:drawableTop="@drawable/course_table"
            android:paddingBottom="5dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="5dp"
            android:text="@string/course_table"
            android:textSize="12sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/r2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/r1"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#e9f8ef"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@drawable/button_round_corner"
            android:drawablePadding="3dp"
            android:drawableTop="@drawable/apply"
            android:paddingBottom="5dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="5dp"
            android:text="@string/search_course"
            android:textSize="12sp" />

        <Button
            android:id="@+id/button_setting"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/button_round_corner"
            android:drawablePadding="3dp"
            android:drawableTop="@drawable/settings"
            android:paddingBottom="5dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="5dp"
            android:text="@string/settings"
            android:textSize="12sp" />
    </RelativeLayout>

</RelativeLayout>
